--- a/.github/workflows/keploy.yml
+++ b/.github/workflows/keploy.yml
@@ -19,11 +19,14 @@ jobs:
     steps:
     - name: Checkout Code
       uses: actions/checkout@v3
+      with:
+        submodules: true
+        token: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: 3.11
+        python-version: '3.11'
 
     - name: Install Python Dependencies
       run: |
@@ -31,7 +34,7 @@ jobs:
 
     - name: Start Flask App in Background
       run: |
-        nohup python3 backend/app.py & 
+        nohup python3 backend/app.py > app.log 2>&1 &
         sleep 10
 
     - name: Install Keploy CLI
@@ -39,5 +42,7 @@ jobs:
         curl --silent -L https://keploy.io/ent/install.sh | bash
 
     - name: Run Keploy Test Suite
+      env:
+        KEPLOY_API_KEY: ${{ secrets.KEPLOY_API_KEY }}
       run: |
-        export KEPLOY_API_KEY=hAh/sIjLZRECFRto8Q== && keploy test-suite --app=f9952c10-ce4a-4502-ba1d-2ff913cb0701 --base-path http://localhost:5000 --cloud
+        keploy test-suite --app=f9952c10-ce4a-4502-ba1d-2ff913cb0701 --base-path http://localhost:5000 --cloud
